po: update po/es_ES/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/pledge.po
+++ b/po/es_ES/pledge.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Adrian Torralba Roman, 2016
 # ixiam <info@ixiam.com>, 2013
 # francescbassas <francesc@babu.cat>, 2014
 # francescbassas <francesc@babu.cat>, 2014
@@ -14,8 +15,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -55,11 +56,11 @@ msgid "Pledge Payment Status"
 msgstr "Estado de pago comprometido"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2 (overdue)"
+msgid "%1 - due on %2 (overdue)"
 msgstr "$%1 - debe en %2 (atrasado)"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2"
+msgid "%1 - due on %2"
 msgstr "$%1 - debe un %2"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
@@ -84,14 +85,6 @@ msgid "Pledge Frequency Interval"
 msgstr "Intervalo de frecuencia del compromiso"
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Pledge Status %1"
-msgstr "Estado del compromiso %1"
-
-#: CRM/Pledge/BAO/Query.php
-msgid "Pledge Payment Status %1"
-msgstr "Estado del pago del compromiso %1"
-
-#: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test"
 msgstr "Compromiso es una prueba"
 
@@ -102,6 +95,10 @@ msgstr "Tipo financiero - %1"
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Page - %1"
 msgstr "Página financiera - %1"
+
+#: CRM/Pledge/BAO/Query.php
+msgid "Contact ID %1 %2"
+msgstr "ID Contacto %1 %2"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
@@ -151,10 +148,6 @@ msgstr "Fecha de modificación del compromiso"
 msgid "Pledge Cancelled Date"
 msgstr "Fecha de cancelación del compromiso"
 
-#: CRM/Pledge/DAO/Pledge.php
-msgid "Pledge Honor Contact"
-msgstr "Contacto de honor del compromiso"
-
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Maximum Number of Reminders"
 msgstr "Número máximo de recordatorios"
@@ -193,12 +186,12 @@ msgid "Reminders Sent"
 msgstr "Recordatorios enviados"
 
 #: CRM/Pledge/Form/Payment.php
+msgid "Edit Scheduled Pledge Payment"
+msgstr "Editar pago comprometido programado"
+
+#: CRM/Pledge/Form/Payment.php
 msgid "Pledge Payment Schedule has been updated."
 msgstr "Programa de pago del compromiso ha sido actualizado."
-
-#: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Pledge by"
-msgstr "Compromiso por"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
@@ -305,6 +298,10 @@ msgid "Pledger Name or Email"
 msgstr "Nombre o correo electrónico de la persona que se compromete "
 
 #: CRM/Pledge/Form/Search.php
+msgid "Pledger Name"
+msgstr "Nombre del Depositante"
+
+#: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
 msgstr "Encontrar compromisos"
 
@@ -313,12 +310,10 @@ msgid "Delete Pledges"
 msgstr "Eliminar compromisos"
 
 #: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1"
-msgstr "Compromiso(s) borrados: %1"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Total Selected Pledge(s): %1"
-msgstr "Total de compromiso(s) seleccionados: %1"
+msgid "%count pledge deleted."
+msgid_plural "%count pledges deleted."
+msgstr[0] "% de compromisos eliminados."
+msgstr[1] "%s de compromisos eliminados."
 
 #: CRM/Pledge/Form/Task/Print.php
 msgid "Print Pledge List"
@@ -327,6 +322,30 @@ msgstr "Imprimir lista de compromiso"
 #: CRM/Pledge/Info.php
 msgid "CiviCRM Pledge Engine"
 msgstr "Motor de compromiso CiviCRM   "
+
+#: CRM/Pledge/Info.php
+msgid "access CiviPledge"
+msgstr "acceder a CiviMember"
+
+#: CRM/Pledge/Info.php
+msgid "View pledges"
+msgstr "Ver compromisos"
+
+#: CRM/Pledge/Info.php
+msgid "edit pledges"
+msgstr "Editar compromisos"
+
+#: CRM/Pledge/Info.php
+msgid "Create and update pledges"
+msgstr "Crear o actualizar compromisos "
+
+#: CRM/Pledge/Info.php
+msgid "delete in CiviPledge"
+msgstr "Elimina CiviMember"
+
+#: CRM/Pledge/Info.php
+msgid "Delete pledges"
+msgstr "Eliminar compromisos"
 
 #: CRM/Pledge/Info.php
 msgid "Your Pledge(s)"
@@ -344,11 +363,11 @@ msgid ""
 "pledge payments."
 msgstr "Al cancelar este compromiso, se cancelarán todos los pagos comprometidos programados.( y no completados)  "
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/PledgeView.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "View Pledge"
 msgstr "Ver compromiso"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Edit Pledge"
 msgstr "Editar compromiso"
 
@@ -356,7 +375,7 @@ msgstr "Editar compromiso"
 msgid "Cancel Pledge"
 msgstr "Cancelar compromiso"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Delete Pledge"
 msgstr "Eliminar compromiso"
 
@@ -377,20 +396,12 @@ msgid "Pledge Search"
 msgstr "Buscar compromiso "
 
 #: CRM/Pledge/Task.php
-msgid "Print Pledges"
-msgstr "Imprimir compromisos "
-
-#: CRM/Pledge/Task.php
 msgid "Export Pledges"
 msgstr "Exportar compromisos"
 
 #: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Edit Scheduled Pledge Payment"
-msgstr "Editar pago comprometido programado"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Scheduled Date for Pledge payment."
-msgstr "Fecha programada para el pago del compromiso "
+msgid "Adjust scheduled amount"
+msgstr "Ajustar la cantidad programada"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -399,10 +410,6 @@ msgid ""
 " to be sent when this pledge is recorded, click Cancel and then click Edit "
 "from the Summary tab to add an email address before recording the pledge."
 msgstr "Usted no podrá enviar una confirmación de este compromiso, porque no hay dirección de correo electrónico registrada para este contacto. Si usted desea que se envíe un acuse de recibo cuando este compromiso se registre, haga clic en Cancelar y luego haga clic en Editar en la ficha Resumen para añadir una dirección de correo electrónico antes de guardar el compromiso."
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "New Pledge"
-msgstr "Nuevo compromiso"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -419,6 +426,10 @@ msgid ""
 msgstr "Mejor considere cancelar el compromiso si quiere mantener un registro auditable y evitar perder información de pagos. Para definir el estado del compromiso como Cancelado y cancelar los pagos de compromisos aún no realizados, primero haga clic en este formulario. después haga clic en el enlace más &gt; de la lista de compromisos y seleccione la acción Cancelar."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+msgid "Pledge by"
+msgstr "Compromiso por"
+
+#: templates/CRM/Pledge/Form/Pledge.tpl
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid ""
 " Pledge total has changed due to payment adjustments. Original pledge amount"
@@ -426,6 +437,7 @@ msgid ""
 msgstr "El total del compromiso ha sido modificado debido a ajustes de pago. La cantidad original del compromiso era %1"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+#: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "installments of"
 msgstr "pagos de"
 
@@ -448,10 +460,6 @@ msgstr "Fecha del primer pago del compromiso. "
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Automatically email an acknowledgment of this pledge to %1?"
 msgstr "¿Enviar automáticamente un correo electrónico con el acuse de recibo de este compromiso a %1?"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Automatically email an acknowledgment of this pledge to "
-msgstr "Enviar automáticamente un correo electrónico con el acuse de recibo de este compromiso a "
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Date when an acknowledgment of the pledge was sent."
@@ -477,20 +485,12 @@ msgstr "Los compromisos están \"Pendientes\" hasta que el primer pago sea recib
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now"
-msgstr "Hacer clic en OK para guardar este registro de compromiso Y enviar un acuse de recibo a %1 ahora"
+"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
+msgstr "Hacer clic en OK para guardar este registro de compromiso Y enviar un acuse de recibo al %1 ahora"
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Pledge By"
 msgstr "Compromiso por "
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " installments of "
-msgstr "Pagos de"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " every "
-msgstr "todos"
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Payment Start"
@@ -517,10 +517,6 @@ msgid "Payments Ended Date"
 msgstr "Fecha de finalización de pagos"
 
 #: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
-msgid "No matching pledge results found."
-msgstr "No se encontraron resultados con compromisos coincidentes."
-
-#: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
 msgid ""
 "If you are searching by pledger name, check your spelling or use fewer "
 "letters."
@@ -533,8 +529,16 @@ msgid ""
 msgstr "Si usted está buscando dentro de un rango de fechas o cantidades, pruebe con un rango más amplio de valores."
 
 #: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click %1 to view pledge payments."
-msgstr "Haga click en %1 para ver los pagos de los compromisos. "
+msgid "Click arrow to view pledge payments."
+msgstr "Haz clic en la flecha para ver los pagos de los compromisos."
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Show payments"
+msgstr "Ver pagos"
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Hide payments"
+msgstr "Ocultar pagos"
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Find more pledges"
@@ -554,10 +558,6 @@ msgstr "A se pagado"
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Begining Date"
 msgstr "Fecha de inicio"
-
-#: templates/CRM/Pledge/Form/Task/SearchTaskHookSample.tpl
-msgid "Pledge made"
-msgstr "Compromiso hecho"
 
 #: templates/CRM/Pledge/Form/Task.tpl
 msgid "Number of selected pledges: %1"
@@ -608,20 +608,12 @@ msgid "Amount Paid"
 msgstr "Cantidad pagada "
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>View Payment</a>"
-msgstr "<a href=\"%1\">Ver pago</a>"
+msgid "Credit Card Payment"
+msgstr "Pago con tarjeta de crédito"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Record Payment (Check, Cash, EFT ...)</a>"
-msgstr "<a href=\"%1\">Registrar pago (cheque, efectivo, transferencia electrónica ...)</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Submit Credit Card Payment</a>"
-msgstr "<a href\"'%1\">Presentar pago de tarjeta de crédito</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Edit Scheduled Payment</a>"
-msgstr "<a href=\"%1\">Editar pago programado</a>"
+msgid "Edit Scheduled Payment"
+msgstr "Editar calendario de pago"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid "Payment Reminders"
@@ -641,9 +633,10 @@ msgstr "Para que los recordatorios se envíen:"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
-"Your site administrator must configure the provided script which updates "
-"pledge payment statuses and sends the reminders (UpdatePledgeRecord.php)."
-msgstr "El administrador del sitio debe configurar el guión que actualiza el pago del compromiso, estatus y envía los recordatorios (UpdatePledgeRecord.php)."
+"Your site administrator must configure the scheduled job (Administer > "
+"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
+"sends the reminders."
+msgstr "El administrador del sitio debe configurar el trabajo programado (Administrar > Configuración del sistema > Trabajos programados) que actualiza el estado de los pagos de compromisos y envía los recordatorios."
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
@@ -663,13 +656,17 @@ msgstr "Compromisos recibidos de %1 desde el comienzo."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid ""
-"Click <a href='%1'>Add Pledge</a> to record a new pledge received from this "
+"Click <a %1>Add Pledge</a> to record a new pledge received from this "
 "contact."
-msgstr "Haga clic en <a href='%1> Añadir compromiso</a> para guardar un nuevo compromiso recibido de este contacto."
+msgstr "Haz clic en <a %1>Añadir compromiso</a> para grabar un nuevo compromiso recibido de este contacto."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "No pledges have been recorded from this contact."
 msgstr "No han sido registrados compromisos de este contacto."
+
+#: templates/CRM/Pledge/Page/Tab.tpl
+msgid "Contributions made in honor of %1"
+msgstr ""
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
@@ -795,94 +792,38 @@ msgstr "Gracias por su generoso aporte."
 msgid "Pledge Payment Reminder"
 msgstr "Recordatorio de pago de compromiso"
 
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2 (overdue)"
-msgstr "$%1 - debe en %2 (atrasado)"
-
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2"
-msgstr "$%1 - debe un %2"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1 (Total Selected: %2) "
-msgstr "Borrar compromiso(s): %1 (Total seleccionado(s): %2) "
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Adjust scheduled amount"
-msgstr "Ajustar la cantidad programada"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
-msgstr "Hacer clic en OK para guardar este registro de compromiso Y enviar un acuse de recibo al %1 ahora"
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click arrow to view pledge payments."
-msgstr "Haz clic en la flecha para ver los pagos de los compromisos."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Show payments"
-msgstr "Ver pagos"
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Hide payments"
-msgstr "Ocultar pagos"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Credit Card Payment"
-msgstr "Pago con tarjeta de crédito"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Edit Scheduled Payment"
-msgstr "Editar calendario de pago"
-
-#: templates/CRM/Pledge/Page/Tab.hlp
-msgid ""
-"Your site administrator must configure the scheduled job (Administer > "
-"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
-"sends the reminders."
-msgstr "El administrador del sitio debe configurar el trabajo programado (Administrar > Configuración del sistema > Trabajos programados) que actualiza el estado de los pagos de compromisos y envía los recordatorios."
-
-#: templates/CRM/Pledge/Page/Tab.tpl
-msgid ""
-"Click <a %1>Add Pledge</a> to record a new pledge received from this "
-"contact."
-msgstr "Haz clic en <a %1>Añadir compromiso</a> para grabar un nuevo compromiso recibido de este contacto."
+#: CRM/Pledge/BAO/Query.php
+msgid "Pledge Acknowledgement Sent"
+msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Contact ID %1 %2"
+msgid "Pledge Acknowledgement  Not Sent"
 msgstr ""
 
-#: CRM/Pledge/Form/Search.php
-msgid "Pledger Name"
+#: CRM/Pledge/BAO/Query.php
+msgid "Acknowledgement sent?"
 msgstr ""
 
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "%count pledge deleted."
-msgid_plural "%count pledges deleted."
-msgstr[0] "% de compromisos eliminados."
-msgstr[1] "%s de compromisos eliminados."
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter a number"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "access CiviPledge"
-msgstr "acceder a CiviMember"
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter number."
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "View pledges"
-msgstr "Ver compromisos"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Pledge Block ID"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "edit pledges"
-msgstr "Editar compromisos"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Expose Frequency Interval?"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "Create and update pledges"
-msgstr "Crear o actualizar compromisos "
+#: CRM/Pledge/Task.php
+msgid "Export pledges"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "delete in CiviPledge"
-msgstr "Elimina CiviMember"
-
-#: CRM/Pledge/Info.php
-msgid "Delete pledges"
-msgstr "Eliminar compromisos"
+#: templates/CRM/Pledge/Form/Task/Print.tpl
+msgid "Beginning Date"
+msgstr ""
