po: update po/es_ES/extension.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/extension.po
+++ b/po/es_ES/extension.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Adrian Torralba Roman, 2016
 # ixiam <info@ixiam.com>, 2013
 # francescbassas <francesc@babu.cat>, 2015
 # ixiam <info@ixiam.com>, 2013
@@ -10,8 +11,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -29,11 +30,6 @@ msgid ""
 "Your extensions cache directory (%1) is not web server writable. Please go "
 "to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
 msgstr "Sus extensiones de directori (%1) no se pueden escribir en el servidor web. Por favor, vaya a la  <href=\"%2\"> página de configuración de la ruta </a> así lo corrige.<br/>"
-
-#: CRM/Extension/Browser.php
-msgid ""
-"Not checking remote URL for extensions since ext_repo_url is set to false."
-msgstr "No se verifican los URL remotos para extensiones ya que ext_repo_url tiene valor asignado falso."
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -55,10 +51,6 @@ msgid ""
 "compatible, you may be able to <a href=\"%3\">download and install "
 "extensions manually</a> (depending on access to your web server).<br />"
 msgstr "No existen actualmente extensiones en el directorio de extensiones público de CiviCRM compatibles con la versión %2 (<a href=\"%1\">solicitar extensiones desde aquí</a>). Si desea instalar una extensión marcada como no compatible, puede <a href=\"%3\">descargar la extensión manualmente</a> (dependiendo el acceso que tenga a su servidor web)."
-
-#: CRM/Extension/Browser.php
-msgid "No Extensions Available for this Version"
-msgstr "No existen extensiones disponibles para esta versión"
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base Directory"
@@ -84,7 +76,7 @@ msgstr "Falló en determinar la extensión URL (%1). Por favor, actualice <a hre
 
 #: CRM/Extension/Container/Basic.php
 msgid "Parse error in extension: %1"
-msgstr ""
+msgstr "Error de análisis en la extensión: %1"
 
 #: CRM/Extension/Container/Default.php
 msgid ""
@@ -102,7 +94,7 @@ msgstr "La extensión URL no está correctamente configurada. Por favor, vaya a 
 msgid ""
 "Your extensions directory is not set or is not writable. Click <a "
 "href='%1'>here</a> to set the extensions directory."
-msgstr ""
+msgstr "Tu directorio de extensiones no esta configurado o no es editable. Pincha <a href='%1'>aquí </a> para configurar el directorio de extensiones."
 
 #: CRM/Extension/Downloader.php
 msgid "ZIP Support Required"
@@ -114,6 +106,13 @@ msgid ""
 "installation of PHP does not support ZIP archives. Please ask your system "
 "administrator to install the standard PHP-ZIP extension."
 msgstr "Usted no podrá instalar extensiones en este momento debido a que su instalación de PHP no es compatible con archivos ZIP. Por favor, pregúntele al administrador del sistema para instalar la extensión estándar PHP-ZIP."
+
+#: CRM/Extension/Downloader.php
+msgid ""
+"WARNING: The downloader may be unable to download files which require HTTP "
+"redirection. This may be a configuration issue with PHP's open_basedir or "
+"safe_mode."
+msgstr "AVISO: El descargador puede ser incapaz de descargar archivos que quieran una redirección HTTP. Este puede ser un problema de configuración con PHP open_basedir o safe_mode. "
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
@@ -159,9 +158,13 @@ msgid ""
 "will be preserved, but the new copy will be used."
 msgstr "Una copia de la extensión (%1) está en la carpeta del sistema (%2). Una copia del sistema será preservada, pero la nueva copia será utilizada. "
 
-#: CRM/Extension/Downloader.php
+#: CRM/Extension/Manager.php
+msgid "Selected option value has been deleted."
+msgstr ""
+
+#: CRM/Extension/Browser.php
 msgid ""
-"WARNING: The downloader may be unable to download files which require HTTP "
-"redirection. This may be a configuration issue with PHP's open_basedir or "
-"safe_mode."
-msgstr "AVISO: El descargador puede ser incapaz de descargar archivos que quieran una redirección HTTP. Este puede ser un problema de configuración con PHP open_basedir o safe_mode. "
+"The CiviCRM public extensions directory at %1 could not be contacted - "
+"please check your webserver can make external HTTP requests or contact "
+"CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>."
+msgstr ""
