po: update po/es_ES/grant.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/grant.po
+++ b/po/es_ES/grant.po
@@ -17,9 +17,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-12-03 09:47+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -46,14 +46,6 @@ msgstr "La fecha de vencimiento de la subvención es NULA"
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Decision Date is NULL"
 msgstr "La fecha de la decisión de la subvención es NULA"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Type %2 %1"
-msgstr "Tipo de subvención %2 %1"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Status %2 %1"
-msgstr "Estado de la subvención %2 %1"
 
 #: CRM/Grant/BAO/Query.php
 msgid "App. Received Date - From"
@@ -100,10 +92,6 @@ msgid "Grant report received"
 msgstr "Informe de subvención recibido"
 
 #: CRM/Grant/DAO/Grant.php
-msgid "Grant Type Id"
-msgstr "Identificador del tipo de subvención"
-
-#: CRM/Grant/DAO/Grant.php
 msgid "Amount granted"
 msgstr "Cantidad subvencionada"
 
@@ -115,10 +103,6 @@ msgstr "Moneda de la subvención"
 msgid "Grant Rationale"
 msgstr "Motivo de la Subvención"
 
-#: CRM/Grant/DAO/Grant.php
-msgid "Grant Status Id"
-msgstr "Identificador del estado de la subvención"
-
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
 msgstr "¿Informe de subvención recibido?"
@@ -126,6 +110,10 @@ msgstr "¿Informe de subvención recibido?"
 #: CRM/Grant/Form/Grant.php
 msgid "Amount Requested<br />(original currency)"
 msgstr "Cantidad solicitada <br /> (moneda original)"
+
+#: CRM/Grant/Form/Grant.php
+msgid "Applicant"
+msgstr "Solicitante"
 
 #: CRM/Grant/Form/Search.php
 msgid "Find Grants"
@@ -136,12 +124,10 @@ msgid "Delete Grants"
 msgstr "Eliminar subvenciones"
 
 #: CRM/Grant/Form/Task/Delete.php
-msgid "Deleted Grant(s): %1"
-msgstr "Subvencion(es) eliminada: %1"
-
-#: CRM/Grant/Form/Task/Delete.php CRM/Grant/Form/Task/Update.php
-msgid "Total Selected Grant(s): %1"
-msgstr "Total subvención(es) seleccionada: %1"
+msgid "%count grant deleted."
+msgid_plural "%count grants deleted."
+msgstr[0] "% de becas eliminadas."
+msgstr[1] "% de becas eliminadas."
 
 #: CRM/Grant/Form/Task/Print.php
 msgid "Print Grant List"
@@ -152,30 +138,46 @@ msgid "Update Grants"
 msgstr "Actualizar subvenciones"
 
 #: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1"
-msgstr "Subvención(es) actualizada: %1"
+msgid "Updated Grant(s): %1 (Total Selected: %2)"
+msgstr "Subvenciones actualizadas: %1 (Total seleccionadas: %2)"
+
+#: CRM/Grant/Info.php
+msgid "access CiviGrant"
+msgstr "acceder a CiviGrant"
+
+#: CRM/Grant/Info.php
+msgid "View all grants"
+msgstr "Ver todas las subvenciones"
+
+#: CRM/Grant/Info.php
+msgid "edit grants"
+msgstr "Editar subvención"
+
+#: CRM/Grant/Info.php
+msgid "Create and update grants"
+msgstr "Crear y actualizar subvenciones "
+
+#: CRM/Grant/Info.php
+msgid "delete in CiviGrant"
+msgstr "eliminar en CiviGrant"
+
+#: CRM/Grant/Info.php
+msgid "Delete grants"
+msgstr "Eliminar subvenciones"
 
 #: CRM/Grant/Page/DashBoard.php
 msgid "grants"
 msgstr "subvenciones"
 
-#: CRM/Grant/Page/Tab.php
-msgid "Grant by"
-msgstr "Subvencionado por"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/GrantView.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "View Grant"
 msgstr "Ver subvención "
 
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "Edit Grant"
 msgstr "Editar subvención"
 
 #: CRM/Grant/Selector/Search.php
-msgid "Are you sure you want to delete this grant?"
-msgstr "¿Está seguro que desea eliminar esta subvención?"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
 msgid "Delete Grant"
 msgstr "Eliminar subvención"
 
@@ -188,16 +190,8 @@ msgid "Granted"
 msgstr "Subvencionado"
 
 #: CRM/Grant/Task.php
-msgid "Print Grants"
-msgstr "Imprimir subvenciones"
-
-#: CRM/Grant/Task.php
 msgid "Export Grants"
 msgstr "Exportar subvenciones"
-
-#: templates/CRM/Grant/Form/Grant.tpl
-msgid "New Grant"
-msgstr "Nueva subvención"
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Are you sure you want to delete this Grant?"
@@ -218,6 +212,14 @@ msgstr "Fecha en que el dinero de la subvención fue transferido."
 #: templates/CRM/Grant/Form/GrantView.tpl
 msgid "(original currency)"
 msgstr "(moneda original)"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Status(s)"
+msgstr "Estado de la Subvención(es)"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Type(s)"
+msgstr "Tipo de Subvención(es) "
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Date is not set"
@@ -311,61 +313,17 @@ msgid "This page lists all grants for %1 since inception."
 msgstr "Esta página muestra todas las subvenciones para %1 desde el inicio."
 
 #: templates/CRM/Grant/Page/Tab.tpl
-msgid ""
-"Click <a accesskey='N' href='%1'>Add Grant</a> to record a Grant for this "
-"contact."
-msgstr "Haga clic en <a accesskey=\"N\" href=\"%1\">añadir subvención</a> para registrar una subvención para este contacto."
+msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
+msgstr "Haz clic en <a %1>Añadir subvención</a> para grabar una subvención a este contacto."
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "No grants have been recorded for this contact."
 msgstr "No se han registrado subvenciones para este contacto."
 
-#: CRM/Grant/Form/Grant.php
-msgid "Applicant"
-msgstr "Solicitante"
+#: CRM/Grant/Task.php
+msgid "Export grants"
+msgstr ""
 
-#: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1 (Total Selected: %2)"
-msgstr "Subvenciones actualizadas: %1 (Total seleccionadas: %2)"
-
-#: templates/CRM/Grant/Page/Tab.tpl
-msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
-msgstr "Haz clic en <a %1>Añadir subvención</a> para grabar una subvención a este contacto."
-
-#: CRM/Grant/Form/Task/Delete.php
-msgid "%count grant deleted."
-msgid_plural "%count grants deleted."
-msgstr[0] "% de becas eliminadas."
-msgstr[1] "% de becas eliminadas."
-
-#: CRM/Grant/Info.php
-msgid "access CiviGrant"
-msgstr "acceder a CiviGrant"
-
-#: CRM/Grant/Info.php
-msgid "View all grants"
-msgstr "Ver todas las subvenciones"
-
-#: CRM/Grant/Info.php
-msgid "edit grants"
-msgstr "Editar subvención"
-
-#: CRM/Grant/Info.php
-msgid "Create and update grants"
-msgstr "Crear y actualizar subvenciones "
-
-#: CRM/Grant/Info.php
-msgid "delete in CiviGrant"
-msgstr "eliminar en CiviGrant"
-
-#: CRM/Grant/Info.php
-msgid "Delete grants"
-msgstr "Eliminar subvenciones"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Status(s)"
-msgstr "Estado de la Subvención(es)"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Type(s)"
-msgstr "Tipo de Subvención(es) "
+#: CRM/Grant/Task.php
+msgid "Update grants"
+msgstr ""
