--- a/po/es_ES/pcp.po
+++ b/po/es_ES/pcp.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Adrian Torralba Roman, 2016
 # ixiam <info@ixiam.com>, 2013
 # Carlos Capote <carloscapote@masticable.org>, 2014
 # ixiam <info@ixiam.com>, 2013
@@ -11,8 +12,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:06+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -37,6 +38,10 @@ msgstr "Editar su página"
 msgid "Tell Friends"
 msgstr "Invitar amigos"
 
+#: CRM/PCP/BAO/PCP.php
+msgid "URL for this Page"
+msgstr "URL para esta Página"
+
 #: CRM/PCP/BAO/PCP.php CRM/PCP/Form/PCPAccount.php
 msgid "Update Contact Information"
 msgstr "Actualizar información del contacto"
@@ -50,8 +55,8 @@ msgid "Approval required"
 msgstr "Aprobación requerida"
 
 #: CRM/PCP/BAO/PCP.php
-msgid "Supporter profile"
-msgstr "Perfil del miembro"
+msgid "Owner Email Notification"
+msgstr "Notificación de email del propietario"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Allow 'Tell a friend' functionality"
@@ -71,15 +76,15 @@ msgstr "Texto del enlace \"Crear página de campaña personal\""
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This event registration is being made thanks to effort of "
+"This event registration is being made thanks to the efforts of "
 "<strong>%1</strong>, who supports our campaign. "
-msgstr "El registro para este evento está siendo realizado gracias al esfuerzo de <strong>%1</strong>, quien apoya nuestra campaña."
+msgstr "El registro de este evento está siendo posible gracias al apoyo de <strong>%1</strong>."
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This contribution is being made thanks to effort of <strong>%1</strong>, who"
-" supports our campaign. "
-msgstr "Esta contribución se realiza gracias a la colaboración de <strong>%1</strong>, quien apoya nuestra campaña."
+"This contribution is being made thanks to the efforts of "
+"<strong>%1</strong>, who supports our campaign. "
+msgstr "Esta donación está siendo posible gracias al apoyo de <strong>%1</strong>."
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Show my support in the public honor roll"
@@ -155,6 +160,12 @@ msgid ""
 "is disabled. Please contact the site administrator if you need assistance."
 msgstr "El perfil de quien apoya la campaña no está establecido para esta página de campaña personal o el perfil está deshabilitado. Por favor, contacte al administrador del sitio si necesita asistencia."
 
+#: CRM/PCP/BAO/PCP.php
+msgid ""
+"Owner Notification is not set for this Personal Campaign Page. Please "
+"contact the site administrator if you need assistance."
+msgstr "El perfil de quien apoya la campaña no está establecido para esta página de campaña personal. Por favor, contacte al administrador del sitio si necesita asistencia."
+
 #: CRM/PCP/DAO/PCP.php
 msgid "Personal Campaign Page ID"
 msgstr "Identificador de la página de campaña personal"
@@ -189,6 +200,10 @@ msgid "Target Entity Type"
 msgstr "Tipo de entidad objetivo"
 
 #: CRM/PCP/DAO/PCPBlock.php
+msgid "Owner Notification"
+msgstr "Notificación al propietario"
+
+#: CRM/PCP/DAO/PCPBlock.php
 msgid "Tellfriend Limit"
 msgstr "Límite de \"Contarle a un amigo\""
 
@@ -203,6 +218,10 @@ msgstr "Configurar una página de campaña personal- Paso 2"
 #: CRM/PCP/Form/Campaign.php
 msgid "Edit Your Personal Campaign Page"
 msgstr "Editar su página de campaña personal"
+
+#: CRM/PCP/Form/Campaign.php
+msgid "Welcome"
+msgstr ""
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Your Goal"
@@ -237,26 +256,16 @@ msgid "Honor Roll"
 msgstr "Cuadro de honor"
 
 #: CRM/PCP/Form/Campaign.php
+msgid "Notify me via email when someone donates to my page"
+msgstr "Notificarme vía email cuando alguien dona a mi página"
+
+#: CRM/PCP/Form/Campaign.php
 msgid "Goal Amount should be a numeric value greater than zero."
 msgstr "La cantidad objetiva debe ser un valor numérico mayor a cero."
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Button Text must be less than 64 characters."
 msgstr "Texto del botón debe ser inferior a 64 caracteres."
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Your picture or image file cannot be larger than 360 x 360 pixels in size."
-msgstr "El archivo de imagen no debe ser mayor a 360 x 360 pixeles."
-
-#: CRM/PCP/Form/Campaign.php
-msgid "The dimensions of the image you have selected are %1 x %2."
-msgstr "Las dimensiones de la imagen que usted ha seleccionado son %1 x %2."
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Please shrink or crop the file or find another smaller image and try again."
-msgstr "Por favor, reduzca o recorte el archivo o encuentre otra imagen menor e intente nuevamente."
 
 #: CRM/PCP/Form/Campaign.php
 msgid ""
@@ -362,10 +371,6 @@ msgstr "Página habilitada"
 msgid "Source Type"
 msgstr "Tipo de fuente"
 
-#: CRM/PCP/Form/PCP.php
-msgid "Event Page"
-msgstr "Página de evento"
-
 #: CRM/PCP/Form/PCPAccount.php
 msgid ""
 "We can't load the requested web page due to an incomplete link. This can be "
@@ -440,6 +445,10 @@ msgid "Send emails inviting your friends to support your campaign!"
 msgstr "¡Envíe correos electrónicos invitando a sus amigos a apoyar su campaña!"
 
 #: CRM/PCP/Page/PCPInfo.php
+msgid "Copy this link to share directly with your network!"
+msgstr "Copia este enlace para compartirlo directamente con tu red de contactos!"
+
+#: CRM/PCP/Page/PCPInfo.php
 msgid "Update your personal contact information"
 msgstr "Actualice su información personal de contacto"
 
@@ -479,9 +488,15 @@ msgstr "Texto para el botón de contribución o registro."
 #: templates/CRM/PCP/Form/Campaign.tpl
 msgid ""
 "If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported your campaign. (People will"
-" have the option to remain anonymous. Their names will NOT be listed.)"
-msgstr "Si esta opción es seleccionada, un \"cuadro de honor\" será mostrado con los nombres (o apodos) de las personas que apoyaron su campaña. (Las personas tendrán la opción de permanecer anónimas. Sus nombres NO serán listados)."
+"names (or nicknames) of the people who supported you. (Donors will have the "
+"option to remain anonymous. Their names will NOT be listed.)"
+msgstr "Si esta opción es seleccionada, un \"cuadro de honor\" será mostrado con los nombres (o apodos) de las personas que le apoyaron. (Las personas donantes tendrán la opción de permanecer anónimas. Sus nombres NO serán listados)."
+
+#: templates/CRM/PCP/Form/Campaign.tpl
+msgid ""
+"If this option is checked, you will receive an email notification when "
+"people contribute to your campaign."
+msgstr "Si esta opción está seleccionada, recibirás una notificación por email cuando alguien contribuya a tu campaña."
 
 #: templates/CRM/PCP/Form/Contribute.hlp
 msgid ""
@@ -491,10 +506,6 @@ msgid ""
 "Campaign Page are recorded as \"soft credits\" for the supporter who created"
 " that campaign page."
 msgstr "Cuando las páginas de campaña personal están habilitadas, los contactos verán un enlace invitándolos a crear su propia página de recaudación de fondos luego de haber hecho una contribución. Las contribuciones de las personas que ingresaron mediante la página de campaña personal son registradas como \"créditos blandos\" para el partidario que creó la página de campaña."
-
-#: templates/CRM/PCP/Form/Contribute.hlp
-msgid "Approval"
-msgstr ""
 
 #: templates/CRM/PCP/Form/Contribute.hlp templates/CRM/PCP/Form/Event.hlp
 msgid "Email Notification"
@@ -730,6 +741,38 @@ msgstr "Ver página"
 msgid "Linked to Contribution Page"
 msgstr "Enlazado a página de contribución"
 
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "You have received a donation at your personal page"
+msgstr "Has recibido una donación en tu página personal"
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Your fundraising total has been updated."
+msgstr "Tu recaudación total ha sido actualizada."
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's information is listed below.  You can choose to contact them and"
+" convey your thanks if you wish."
+msgstr "La información de los donantes está listada abajo. Puedes contactar con ellos y mostrar tu agradecimiento si lo deseas."
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's name has been added to your honor roll unless they asked not to "
+"be included."
+msgstr "El nombre del donante ha sido añadido a tu listado de donantes salvo que ellos quisieran no ser añadidos."
+
+#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
+msgid "Someone has just donated to your personal campaign page"
+msgstr "Alguien ha donado a tu campaña personal."
+
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Personal Campaign Page Owner Notification"
+msgstr "Notificación de página de dueño de la campaña personal"
+
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid "Your Personal Campaign Page"
@@ -762,9 +805,9 @@ msgstr "Vaya a su página"
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to edit\n"
-"your page, tell friends, and update your contact info."
-msgstr "Cuando usted ve su página de campaña con LA SESIÓN INICIADA, la página incluye enlaces para editar\nsu página, contarle a sus amigos y actualizar su información de contacto."
+"When you view your campaign page WHILE LOGGED IN, the page includes links to"
+" edit your page, tell friends, and update your contact info."
+msgstr "Cuando usted ve su página de campaña con LA SESIÓN INICIADA, la página incluye enlaces para editar su página, contarle a sus amigos y actualizar su información de contacto."
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -782,9 +825,10 @@ msgstr "¿Preguntas? Envíe un email a"
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid ""
-"Your personal campaign page has been reviewed. There were some issues with the content\n"
-"which prevented us from approving the page. We are sorry for any inconvenience."
-msgstr "Su página de campaña personal ha sido revisada. Hubo algunos problemas con el contenido,\nlo cual nos impidió aprobar la página. Pedimos disculpas por cualquier inconveniente."
+"Your personal campaign page has been reviewed. There were some issues with "
+"the content which prevented us from approving the page. We are sorry for any"
+" inconvenience."
+msgstr "Tu página personal de la campaña ha sido revisada. Hay algunos problemas con el contenido que no nos permite aprobar la página. Disculpa las molestias."
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -879,102 +923,42 @@ msgstr "Haga clic o pegue este enlace en su buscador y siga las indicaciones"
 msgid "Click or paste this link into your browser"
 msgstr "Haga clic o pegue este enlace en su buscador "
 
-#: CRM/PCP/BAO/PCP.php
-msgid "URL for this Page"
-msgstr "URL para esta Página"
+#: CRM/PCP/DAO/PCP.php
+msgid "PCP Block"
+msgstr ""
 
-#: CRM/PCP/Page/PCPInfo.php
-msgid "Copy this link to share directly with your network!"
-msgstr "Copia este enlace para compartirlo directamente con tu red de contactos!"
+#: CRM/PCP/DAO/PCP.php
+msgid "Use Thermometer?"
+msgstr ""
 
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported you. (Donors will have the "
-"option to remain anonymous. Their names will NOT be listed.)"
-msgstr "Si esta opción es seleccionada, un \"cuadro de honor\" será mostrado con los nombres (o apodos) de las personas que le apoyaron. (Las personas donantes tendrán la opción de permanecer anónimas. Sus nombres NO serán listados)."
+#: CRM/PCP/DAO/PCP.php
+msgid "Show Honor Roll?"
+msgstr ""
 
-#: CRM/PCP/BAO/PCP.php
-msgid "Owner Email Notification"
-msgstr "Notificación de email del propietario"
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This event registration is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
-msgstr "El registro de este evento está siendo posible gracias al apoyo de <strong>%1</strong>."
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This contribution is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
-msgstr "Esta donación está siendo posible gracias al apoyo de <strong>%1</strong>."
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"Owner Notification is not set for this Personal Campaign Page. Please "
-"contact the site administrator if you need assistance."
-msgstr "El perfil de quien apoya la campaña no está establecido para esta página de campaña personal. Por favor, contacte al administrador del sitio si necesita asistencia."
+#: CRM/PCP/DAO/PCP.php
+msgid "Notify Owner?"
+msgstr ""
 
 #: CRM/PCP/DAO/PCPBlock.php
-msgid "Owner Notification"
-msgstr "Notificación al propietario"
+msgid "PCP Block ID"
+msgstr ""
 
-#: CRM/PCP/Form/Campaign.php
-msgid "Notify me via email when someone donates to my page"
-msgstr "Notificarme vía email cuando alguien dona a mi página"
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity"
+msgstr ""
 
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, you will receive an email notification when "
-"people contribute to your campaign."
-msgstr "Si esta opción está seleccionada, recibirás una notificación por email cuando alguien contribuya a tu campaña."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity ID"
+msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "You have received a donation at your personal page"
-msgstr "Has recibido una donación en tu página personal"
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Approval Required?"
+msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Your fundraising total has been updated."
-msgstr "Tu recaudación total ha sido actualizada."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell a Friend Enabled?"
+msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's information is listed below.  You can choose to contact them and"
-" convey your thanks if you wish."
-msgstr "La información de los donantes está listada abajo. Puedes contactar con ellos y mostrar tu agradecimiento si lo deseas."
-
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's name has been added to your honor roll unless they asked not to "
-"be included."
-msgstr "El nombre del donante ha sido añadido a tu listado de donantes salvo que ellos quisieran no ser añadidos."
-
-#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
-msgid "Someone has just donated to your personal campaign page"
-msgstr "Alguien ha donado a tu campaña personal."
-
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Personal Campaign Page Owner Notification"
-msgstr "Notificación de página de dueño de la campaña personal"
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_html.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_text.tpl
-msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to"
-" edit your page, tell friends, and update your contact info."
-msgstr "Cuando usted ve su página de campaña con LA SESIÓN INICIADA, la página incluye enlaces para editar su página, contarle a sus amigos y actualizar su información de contacto."
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-msgid ""
-"Your personal campaign page has been reviewed. There were some issues with "
-"the content which prevented us from approving the page. We are sorry for any"
-" inconvenience."
-msgstr "Tu página personal de la campaña ha sido revisada. Hay algunos problemas con el contenido que no nos permite aprobar la página. Disculpa las molestias."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell A Friend Limit"
+msgstr ""
